# BMP-gray-transfer

./: CMakeLists.txt  README.md  main.cpp
include/: bmp_processor.h
src/: bmp_processor.cpp
